update images are aligned in hero section, revisit for correct sizing

--- a/css/header.css
+++ b/css/header.css
@@ -5,11 +5,68 @@
     div {
 
         .hero-section__title {
+            font-size: max(2.5rem, 2vw);
 
             .hero-section__title__p {
-                font-size: min(1rem, 5vw);
+                font-size: max(1rem, 0.8vw);
                 font-weight: 200;
             }
         }
     }
+
+    .hero-section__grid {
+        display: grid;
+        grid-template-columns: 2fr 1fr 1fr 2fr;
+        grid-template-rows: 2fr;
+        width: 100%;
+        height: 30rem;
+
+        img {
+            object-fit: cover;
+            height: auto;
+        }
+
+
+        img:first-child {
+            grid-column: 1;
+            grid-row: span 2;
+            border: 2px solid orange;
+        }
+
+        img:nth-child(2) {
+            grid-column: 2;
+            grid-row: 1;
+            border: 2px solid red;
+        }
+
+        img:nth-child(3) {
+            grid-column: 3;
+            grid-row: 1;
+            border: 2px solid cyan;
+        }
+
+        img:nth-child(4) {
+            grid-column: 4;
+            grid-row: 1;
+            border: 2px solid palevioletred;
+        }
+
+        img:nth-child(5) {
+            grid-column: 2/4;
+            grid-row: 2;
+            border: 2px solid orangered;
+        }
+
+        img:nth-child(6) {
+            grid-column: 4;
+            grid-row: 2;
+            border: 2px solid yellow;
+        }
+    }
 }
+
+/* .hero-section__grid:first-child {
+    grid-column: 2/6;
+    grid-row: 3;
+    border: 1px solid orange;
+} */
